# snakemake-interface-software-deployment-plugins

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  test.yml
snakemake_interface_software_deployment_plugins/: __init__.py  _common.py  settings.py  tests.py
snakemake_interface_software_deployment_plugins/registry/: __init__.py  plugin.py
tests/: test_interface.py  test_py37.py  tests.py
