[tool.poetry]
authors = ["Johannes Köster <johannes.koester@uni-due.de>"]
description = "This package provides a stable interface for interactions between Snakemake and its software deployment plugins."
license = "MIT"
name = "snakemake-interface-software-deployment-plugins"
packages = [{include = "snakemake_interface_software_deployment_plugins"}]
readme = "README.md"
version = "0.6.1"

[tool.poetry.dependencies]
argparse-dataclass = "^2.0.0"
python = "^3.11"
snakemake-interface-common = "^1.17.4"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.3.1"}
flake8-bugbear = "^22.1.11"
pytest = "^7.0"
ruff = "^0.9.9"
snakemake-software-deployment-plugin-envmodules = "^0.1.2"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 63

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
