[project]
authors = [
    { name = "Johannes Köster", email = "johannes.koester@uni-due.de" }
]
description = "This package provides a stable interface for interactions between Snakemake and its software deployment plugins."
license = "MIT"
name = "snakemake-interface-software-deployment-plugins"
readme = "README.md"
version = "0.12.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "argparse-dataclass >=2.0.0,<3.0",
    "snakemake-interface-common >=1.17.4,<2.0.0"
]

[project.urls]
repository = "https://github.com/snakemake/snakemake-interface-software-deployment-plugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.pypi-dependencies]
snakemake-interface-software-deployment-plugins = { path = ".", editable = true }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
dev = { features = ["dev"] }
publish = { features = ["publish"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.11"
pytest-cov = ">=6.0.0,<7"
pyrefly = ">=0.52.0,<0.53"

[tool.pixi.feature.dev.pypi-dependencies]
snakemake-software-deployment-plugin-envmodules = ">=0.1.2,<1.0"

[tool.pixi.feature.dev.tasks]
format = "ruff format"
lint = "ruff check"
typecheck = "pyrefly check"
qc = { depends-on = ["format", "lint"] }
coverage-report = "coverage report -m"

[tool.pixi.feature.dev.tasks.test]
cmd = [
    "pytest",
    "--cov=snakemake_software_deployment_plugin_envmodules",
    "--cov-report=xml:coverage-report/coverage.xml",
    "--cov-report=term-missing",
    "tests/test_interface.py",
]

[tool.coverage.report]
exclude_lines = ["pass", "\\.\\.\\."]
fail_under = 63.0

[tool.pixi.feature.publish.dependencies]
twine = ">=6.1.0,<7"
python-build = ">=1.2.2,<2"


[tool.pixi.feature.publish.tasks]
build = { cmd = "python -m build", description = "Build the package into the dist/ directory" }
check-build = { cmd = "python -m twine check dist/*", depends-on = [
    "build",
], description = "Check that the package can be uploaded" }
